# paf

./: Cargo.toml  LICENSE  README.md
examples/: print_paf.rs  write_paf.rs
src/: error.rs  lib.rs  reader.rs  writer.rs
